additions in displacement.sass, changes in typography.sass

--- a/src/reset.sass
+++ b/src/reset.sass
@@ -1,6 +1,6 @@
 // modified from Eric Meyer's reset css
 
-* 
+*, *:before, *:after
     box-sizing: border-box
 
 html, body, div, span, applet, object, iframe,
