major edits in colors.sass

--- a/c.sass
+++ b/c.sass
@@ -15,14 +15,24 @@
     --gutter: var(--baseSize)
     --scale: 1.25
     --lineHeight: 1.7
-    --colorBase: hsla(353, 57%, 47%, 1)
-    --colorLight: hsla(353, 57%, 77%, 1)
-    --colorLightest: hsla(353, 57%, 97%, 1)
-    --colorDark: hsla(353, 57%, 37%, 1)
-    --colorDarkest: hsla(353, 57%, 7%, 1)
-    --colorHilite: hsla(31, 100%, 48%, 1)
     --borderRadius: 4px
     --borderSize: 1px
+    --fontFamily: Arial, sans-serif
+    --colorPrimary: #000000
+    --colorPrimaryLighter: #000000
+    --colorPrimaryLightest: #000000
+    --colorPrimaryDarker: #000000
+    --colorPrimaryDarkest: #000000
+    --colorSecondary: #000000
+    --colorSecondaryLighter: #000000
+    --colorSecondaryLightest: #000000
+    --colorSecondaryDarker: #000000
+    --colorSecondaryDarkest: #000000
+    --colorTertiary: #000000
+    --colorTertiaryLighter: #000000
+    --colorTertiaryLightest: #000000
+    --colorTertiaryDarker: #000000
+    --colorTertiaryDarkest: #000000
 
 body 
     font-size: var(--baseSize)
