some major modifications to color helpers

--- a/c.sass
+++ b/c.sass
@@ -33,6 +33,7 @@
     --colorTertiaryLightest: #000000
     --colorTertiaryDarker: #000000
     --colorTertiaryDarkest: #000000
+    --fontFamily: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
 
 body 
     font-size: var(--baseSize)
