--- a/src/colors.sass
+++ b/src/colors.sass
@@ -64,6 +64,39 @@
 .bgClrT-d2
     background-color: var(--colorTertiaryDarkest)
 
+.brdClrP
+    border-color: var(--colorPrimary)
+.brdClrP-l
+    border-color: var(--colorPrimaryLighter)
+.brdClrP-l2
+    border-color: var(--colorPrimaryLightest)
+.brdClrP-d
+    border-color: var(--colorPrimaryDarker)
+.brdClrP-d2
+    border-color: var(--colorPrimaryDarkest)
+
+.brdClrS
+    border-color: var(--colorSecondary)
+.brdClrS-l
+    border-color: var(--colorSecondaryLighter)
+.brdClrS-l2
+    border-color: var(--colorSecondaryLightest)
+.brdClrS-d
+    border-color: var(--colorSecondaryDarker)
+.brdClrS-d2
+    border-color: var(--colorSecondaryDarkest)
+
+.brdClrT
+    border-color: var(--colorTertiary)
+.brdClrT-l
+    border-color: var(--colorTertiaryLighter)
+.brdClrT-l2
+    border-color: var(--colorTertiaryLightest)
+.brdClrT-d
+    border-color: var(--colorTertiaryDarker)
+.brdClrT-d2
+    border-color: var(--colorTertiaryDarkest)
+
 +mp
     .clrP-mp
         color: var(--colorPrimary)
@@ -130,6 +163,39 @@
         background-color: var(--colorTertiaryDarker)
     .bgClrT-d2-mp
 
+    .brdClrP-mp
+        border-color: var(--colorPrimary)
+    .brdClrP-l-mp
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-mp
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-mp
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-mp
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-mp
+        border-color: var(--colorSecondary)
+    .brdClrS-l-mp
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-mp
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-mp
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-mp
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-mp
+        border-color: var(--colorTertiary)
+    .brdClrT-l-mp
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-mp
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-mp
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-mp
+        border-color: var(--colorTertiaryDarkest)
+        
 +ml
     .clrP-ml
         color: var(--colorPrimary)
@@ -196,6 +262,39 @@
         background-color: var(--colorTertiaryDarker)
     .bgClrT-d2-ml
         background-color: var(--colorTertiaryDarkest)
+
+    .brdClrP-ml
+        border-color: var(--colorPrimary)
+    .brdClrP-l-ml
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-ml
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-ml
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-ml
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-ml
+        border-color: var(--colorSecondary)
+    .brdClrS-l-ml
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-ml
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-ml
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-ml
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-ml
+        border-color: var(--colorTertiary)
+    .brdClrT-l-ml
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-ml
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-ml
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-ml
+        border-color: var(--colorTertiaryDarkest)
 
 +m
     .clrP-m
@@ -264,6 +363,39 @@
     .bgClrT-d2-m
         background-color: var(--colorTertiaryDarkest)
 
+    .brdClrP-m
+        border-color: var(--colorPrimary)
+    .brdClrP-l-m
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-m
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-m
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-m
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-m
+        border-color: var(--colorSecondary)
+    .brdClrS-l-m
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-m
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-m
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-m
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-m
+        border-color: var(--colorTertiary)
+    .brdClrT-l-m
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-m
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-m
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-m
+        border-color: var(--colorTertiaryDarkest)
+
 +tp
     .clrP-tp
         color: var(--colorPrimary)
@@ -330,6 +462,39 @@
         background-color: var(--colorTertiaryDarker)
     .bgClrT-d2-tp
         background-color: var(--colorTertiaryDarkest)
+
+    .brdClrP-tp
+        border-color: var(--colorPrimary)
+    .brdClrP-l-tp
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-tp
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-tp
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-tp
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-tp
+        border-color: var(--colorSecondary)
+    .brdClrS-l-tp
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-tp
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-tp
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-tp
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-tp
+        border-color: var(--colorTertiary)
+    .brdClrT-l-tp
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-tp
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-tp
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-tp
+        border-color: var(--colorTertiaryDarkest)
 
 +tl
     .clrP-tl
@@ -398,6 +563,39 @@
     .bgClrT-d2-tl
         background-color: var(--colorTertiaryDarkest)
 
+    .brdClrP-tl
+        border-color: var(--colorPrimary)
+    .brdClrP-l-tl
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-tl
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-tl
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-tl
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-tl
+        border-color: var(--colorSecondary)
+    .brdClrS-l-tl
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-tl
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-tl
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-tl
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-tl
+        border-color: var(--colorTertiary)
+    .brdClrT-l-tl
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-tl
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-tl
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-tl
+        border-color: var(--colorTertiaryDarkest)
+
 +t
     .clrP-t
         color: var(--colorPrimary)
@@ -464,6 +662,39 @@
         background-color: var(--colorTertiaryDarker)
     .bgClrT-d2-t
         background-color: var(--colorTertiaryDarkest)
+
+    .brdClrP-t
+        border-color: var(--colorPrimary)
+    .brdClrP-l-t
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-t
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-t
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-t
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-t
+        border-color: var(--colorSecondary)
+    .brdClrS-l-t
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-t
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-t
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-t
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-t
+        border-color: var(--colorTertiary)
+    .brdClrT-l-t
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-t
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-t
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-t
+        border-color: var(--colorTertiaryDarkest)
 
 +l
     .clrP-l
@@ -532,6 +763,39 @@
     .bgClrT-d2-l
         background-color: var(--colorTertiaryDarkest)
 
+    .brdClrP-l
+        border-color: var(--colorPrimary)
+    .brdClrP-l-l
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-l
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-l
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-l
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-l
+        border-color: var(--colorSecondary)
+    .brdClrS-l-l
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-l
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-l
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-l
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-l
+        border-color: var(--colorTertiary)
+    .brdClrT-l-l
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-l
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-l
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-l
+        border-color: var(--colorTertiaryDarkest)
+
 +hd
     .clrP-hd
         color: var(--colorPrimary)
@@ -598,4 +862,37 @@
         background-color: var(--colorTertiaryDarker)
     .bgClrT-d2-hd
         background-color: var(--colorTertiaryDarkest)
+
+    .brdClrP-hd
+        border-color: var(--colorPrimary)
+    .brdClrP-l-hd
+        border-color: var(--colorPrimaryLighter)
+    .brdClrP-l2-hd
+        border-color: var(--colorPrimaryLightest)
+    .brdClrP-d-hd
+        border-color: var(--colorPrimaryDarker)
+    .brdClrP-d2-hd
+        border-color: var(--colorPrimaryDarkest)
+
+    .brdClrS-hd
+        border-color: var(--colorSecondary)
+    .brdClrS-l-hd
+        border-color: var(--colorSecondaryLighter)
+    .brdClrS-l2-hd
+        border-color: var(--colorSecondaryLightest)
+    .brdClrS-d-hd
+        border-color: var(--colorSecondaryDarker)
+    .brdClrS-d2-hd
+        border-color: var(--colorSecondaryDarkest)
+
+    .brdClrT-hd
+        border-color: var(--colorTertiary)
+    .brdClrT-l-hd
+        border-color: var(--colorTertiaryLighter)
+    .brdClrT-l2-hd
+        border-color: var(--colorTertiaryLightest)
+    .brdClrT-d-hd
+        border-color: var(--colorTertiaryDarker)
+    .brdClrT-d2-hd
+        border-color: var(--colorTertiaryDarkest)
 
