--- a/src/typography.sass
+++ b/src/typography.sass
@@ -1,3 +1,5 @@
+.txtUpper
+    text-transform: uppercase
 $i: 0
 @while $i <= 5 
     @if $i == 0
@@ -11,6 +13,8 @@ $i: 0
     $i: $i + 1
 
 +mp
+    .txtUpper-mp
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -23,6 +27,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +ml
+    .txtUpper-ml
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -35,6 +41,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +m 
+    .txtUpper-m
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -47,6 +55,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +tp
+    .txtUpper-tp
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -59,6 +69,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +tl
+    .txtUpper-tl
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -71,6 +83,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +t
+    .txtUpper-t
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -83,6 +97,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +l
+    .txtUpper-l
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
@@ -95,6 +111,8 @@ $i: 0
                 font-size: calc(var(--baseSize) / (#{pow(var(--scale), $i)}))
         $i: $i + 1
 +hd
+    .txtUpper-hd
+        text-transform: uppercase
     $i: 0
     @while $i <= 5 
         @if $i == 0
