--- a/c.sass
+++ b/c.sass
@@ -1,40 +1,13 @@
-@import 'src/reset.sass'
-@import 'src/variables.sass'
-@import 'src/grid.sass'
-@import 'src/displacement.sass'
-@import 'src/alignment.sass'
-@import 'src/flex.sass'
-@import 'src/typography.sass'
-@import 'src/visibility.sass'
-@import 'src/colors.sass'
-@import 'src/borders.sass'
-
-*:root
-    --baseSize: 16px
-    --cols: 12
-    --gutter: var(--baseSize)
-    --scale: 1.25
-    --lineHeight: 1.7
-    --borderRadius: 4px
-    --borderSize: 1px
-    --fontFamily: Arial, sans-serif
-    --colorPrimary: #000000
-    --colorPrimaryLighter: #000000
-    --colorPrimaryLightest: #000000
-    --colorPrimaryDarker: #000000
-    --colorPrimaryDarkest: #000000
-    --colorSecondary: #000000
-    --colorSecondaryLighter: #000000
-    --colorSecondaryLightest: #000000
-    --colorSecondaryDarker: #000000
-    --colorSecondaryDarkest: #000000
-    --colorTertiary: #000000
-    --colorTertiaryLighter: #000000
-    --colorTertiaryLightest: #000000
-    --colorTertiaryDarker: #000000
-    --colorTertiaryDarkest: #000000
-    --fontFamily: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
-
-body 
-    font-size: var(--baseSize)
-    line-height: var(--lineHeight)
+@import 'src/reset'
+@import 'src/variables'
+@import 'src/alignment'
+@import 'src/borders'
+@import 'src/colors'
+@import 'src/dimensions'
+@import 'src/displays'
+@import 'src/flex'
+@import 'src/grid'
+@import 'src/margins'
+@import 'src/paddings'
+@import 'src/typography'
+@import 'custom'
